[metadata]
name = fakejuju
summary = Drive fake-juju from Python
home-page = https://github.com/juju/fake-juju
description-file = ../README.rst
author = Canonical Landscape team
author-email = juju@lists.ubuntu.com
license = LGPLv3
platform = POSIX
classifier =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[files]
packages = fakejuju

[extras]
test =
    testtools

[bdist_wheel]
universal = 1
